brtc2.0/nginxk8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-deployment
  namespace: brtc-test-latest
spec:
   
  template:
    metadata:
      name: nginx
      labels:
        app: mpc-pod
    spec:
      hostNetwork: true
      containers:
        - name: mpc
          image: registry.cn-beijing.aliyuncs.com/bjy-webrtc/mpc:bigroom22101902
          ports:
            - containerPort: 8082
  selector:
    matchLabels:
      app: mpc-pod
